# DocuMind

./: .gitignore  README.md  app.py  chains.py  pyproject.toml  requirements.txt
core/: llm.py  ocr.py  vectorstore.py
services/: document_loader.py  file_utils.py
